# ai-anime-recommender-rag

./: .dockerignore  .gitignore  README.md  create_structure.py  how_to_run.md  pyproject.toml
app/: streamlit_app.py
data/: anime_processed.csv  anime_with_synopsis.csv
docker/: Dockerfile
kubernetes/: deployment.yaml  pv.yaml  pvc.yaml  secret.yaml  service.yaml  storageclass.yaml
src/recommender_system/: recommender.py
